style: update the color contrast to ensure better perfomance on accessibility low-contrast ratio

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -152,7 +152,7 @@ button {
   padding: 12px;
   width: 124px;
   height: 48px;
-  color: white;
+  color: #2E2E2E;
   text-align: center;
   font: 700 17px/24px 'Inter', sans-serif;
   cursor: pointer;
@@ -160,15 +160,15 @@ button {
 
 .button-1:hover {
   background-color: #fff5e1;
-  border: 1px solid #f55800;
-  color: #f55800;
+  border: 1px solid #8F3400;
+  color: #8F3400;
   box-sizing: border-box;
 }
 
 .button-1:focus {
   background-color: #fff5e1;
-  border: 1px solid #f55800;
-  color: #f55800;
+  border: 1px solid #8F3400;
+  color: #8F3400;
   box-sizing: border-box;
 }
 
